@@ -7,8 +7,11 @@ import lombok.EqualsAndHashCode;
 import lombok.NoArgsConstructor;
 import org.example.demo.entity.BaseEntity;
 import org.example.demo.entity.event.Event;
+import org.example.demo.util.event.EventUtil;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -35,9 +38,30 @@ public class Product extends BaseEntity {
     @ManyToMany(mappedBy = "products")
     private List<Event> events = new ArrayList<>();
 
+    @Transient
+    private Double averageDiscountPercentEvent;
+
     public List<Event> getEvents() {
         return events.stream()
-                .sorted((e1, e2) -> Integer.compare(e2.getDiscountPercent(), e1.getDiscountPercent()))
-                .collect(Collectors.toList());
+                .filter(event -> event.getStartDate().isBefore(event.getEndDate()) // startDate < endDate
+                        && event.getStartDate().isBefore(LocalDateTime.now())     // startDate <= hôm nay
+                        && event.getEndDate().isAfter(LocalDateTime.now())       // endDate >= hôm nay
+                        && event.getQuantityDiscount() > 0)                      // số lượng giảm giá > 0
+                .sorted(Comparator.comparing(Event::getDiscountPercent).reversed()) // Sắp xếp giảm dần theo % giảm giá
+                .toList();
+    }
+
+    public List<Event> getValidEvents() {
+        return events.stream()
+                .filter(event -> event.getStartDate().isBefore(event.getEndDate()) // startDate < endDate
+                        && event.getStartDate().isBefore(LocalDateTime.now())     // startDate <= hôm nay
+                        && event.getEndDate().isAfter(LocalDateTime.now())       // endDate >= hôm nay
+                        && event.getQuantityDiscount() > 0)                      // số lượng giảm giá > 0
+                .sorted(Comparator.comparing(Event::getDiscountPercent).reversed()) // Sắp xếp giảm dần theo % giảm giá
+                .toList();
+    }
+
+    public Double getAverageDiscountPercentEvent() {
+        return EventUtil.getAveragePercentEvent(getValidEvents());
     }
 }
